# z2p

./: Cargo.toml  Dockerfile  spec.yaml
.github/workflows/: general.yml
.sqlx/: query-f8d88fe627def94038d0426277e77482cc380718537a5e4a7a7a9130e59d9de8.json
scripts/: init_db.sh
src/: configuration.rs  main.rs  startup.rs
src/domain/: subscriber_email.rs  subscriber_name.rs
src/routes/: subscriptions.rs
tests/: health_check.rs
